multitenancy-benchmarks/require-resource-quota/.chainsaw-test/ns-good.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: good-ns
spec: {}
