multitenancy-benchmarks/require-resource-quota/.chainsaw-test/chainsaw-enforce-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-quota
spec:
  validationFailureAction: Enforce
