multitenancy-benchmarks/require-resource-quota/.chainsaw-test/chainsaw-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-quota
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
